Closed Bug 469311 Opened 16 years ago Closed 16 years ago

QMozView cleanup patch

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tobias.hunger, Unassigned)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.4) Gecko/2008111616 Ubuntu/9.04 (jaunty) Firefox/3.0.4
Build Identifier: hg rev. 543d5566a209

Clean up QMozView class:
* Fix warnings.
* make private pointer const.
* Do not use macros starting with _, they are reserved.


Reproducible: Always
Blocks: 467072
http://hg.mozilla.org/incubator/embedding/rev/0d06a53480c8
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: