Bug 469311: QMozView cleanup, r=mfinkle