qt/QMozApp.h
@@ -1,19 +1,58 @@
-#ifndef __QMozApp_h_
-#define __QMozApp_h_
+/* ***** BEGIN LICENSE BLOCK *****
+ * Version: MPL 1.1/GPL 2.0/LGPL 2.1
+ *
+ * The contents of this file are subject to the Mozilla Public License Version
+ * 1.1 (the "License"); you may not use this file except in compliance with
+ * the License. You may obtain a copy of the License at
+ * http://www.mozilla.org/MPL/
+ *
+ * Software distributed under the License is distributed on an "AS IS" basis,
+ * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+ * for the specific language governing rights and limitations under the
+ * License.
+ *
+ * The Original Code is mozilla.org code.
+ *
+ * The Initial Developer of the Original Code is
+ * Mozilla Corporation.
+ * Portions created by the Initial Developer are Copyright (C) 20007
+ * the Initial Developer. All Rights Reserved.
+ *
+ * Contributor(s):
+ *   Pelle Johnsen <pjohnsen@mozilla.com>
+ *   Tobias Hunger <tobias.hunger@gmail.com>
+ *   Steffen Imhof <steffen.imhof@googlemail.com>
+ *
+ * Alternatively, the contents of this file may be used under the terms of
+ * either the GNU General Public License Version 2 or later (the "GPL"), or
+ * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+ * in which case the provisions of the GPL or the LGPL are applicable instead
+ * of those above. If you wish to allow use of your version of this file only
+ * under the terms of either the GPL or the LGPL, and not to allow others to
+ * use your version of this file under the terms of the MPL, indicate your
+ * decision by deleting the provisions above and replace them with the notice
+ * and other provisions required by the GPL or the LGPL. If you do not delete
+ * the provisions above, a recipient may use your version of this file under
+ * the terms of any one of the MPL, the GPL or the LGPL.
+ *
+ * ***** END LICENSE BLOCK ***** */
+
+#ifndef QMozApp_h
+#define QMozApp_h
 
 #ifndef Q_MOZVIEW_EXPORT
 #define Q_MOZVIEW_EXPORT
 #endif
 
-#include <QObject>
+#include <QtCore/QObject>
+#include <QtCore/QString>
 
 class QMozApp : public QObject
 {
     Q_OBJECT
 
 public:
-    QMozApp();
-    QMozApp(const QString& profilePath);
+    QMozApp(const QString& profilePath = QString());
     virtual ~QMozApp();
 
     QString stringPref(const QString& name) const;
@@ -25,7 +64,7 @@ public:
 
 private:
     class Private;
-    Private* mPrivate;
+    Private* const mPrivate;
 };
 
-#endif /* __QMozApp_h_ */
+#endif /* QMozApp_h */
